[tool.poetry]
name = "django-autowired"
version = "0.1.0"
description = ""
authors = ["BeanNan <fjn.aniaan@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = 'https://github.com/BeanNan/django-autowired'
homepage = "https://github.com/BeanNan/django-autowired"
keywords=["Django", "Dependency Injection"]
classifiers=[
        'Development Status :: 5 - Production/Stable',
        'Environment :: Web Environment',
        'Framework :: Django',
        'Framework :: Django :: 2.2',
        'Framework :: Django :: 3.0',
        'Framework :: Django :: 3.1',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: MIT License',
        'Operating System :: OS Independent',
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.5',
        'Programming Language :: Python :: 3.6',
        'Programming Language :: Python :: 3.7',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3 :: Only',
        'Topic :: Internet :: WWW/HTTP',
]

packages = [
    { include = "django_autowired" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.8"
django = ">=2.2"
pydantic = "^1.7.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.8.2"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
zimports = "^0.2.2"
commitizen = "^2.4.2"
pytest = "^6.1.2"
pytest-django = "^4.1.0"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["django_autowired", "tests"]
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "django_autowired"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''



[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
